<resources>
    <string name="app_name">Android Practice</string>
    <string name="titleLogin">Login screen</string>
    <string name="titleRegister">Register screen</string>
    <string name="titleMain">Main screen</string>
    <string name="subTitle">Practical use of \n MVP, Dagger2 and ButterKnife</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordAgain">Password again</string>
    <string name="loginButton">LOG IN</string>
    <string name="logoutButton">LOG OUT</string>
    <string name="registerButton">REGISTER</string>
    <string name="BackButton">BACK</string>
    <string name="register">or register ?</string>
</resources>
